--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@github/webauthn-json": "^2.0.2",
+    "@prisma/client": "^4.8.1",
+    "@simplewebauthn/server": "^7.0.0",
+    "iron-session": "^6.3.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
     "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1"
+    "eslint-config-next": "13.1.1",
+    "prisma": "^4.8.1"
   }
 }
